# kernels

./: .gitignore  README.md
01-kernel_module/: Makefile  README.md  run.sh  stop.sh
02-miniFS/: .gitignore  CMakeLists.txt  Makefile  README.md
02-miniFS/src/: main.c
02-miniFS/src/internal/commands/: CMakeLists.txt  execute.c  execute.h
02-miniFS/src/internal/debug/: CMakeLists.txt  debug.c  debug.h
02-miniFS/src/internal/fs/: CMakeLists.txt  fs.c  fs.h
02-miniFS/src/internal/utils/: CMakeLists.txt  utils-test.c  utils.c  utils.h
03-sys_call/: .gitignore  Makefile  README.md
03-sys_call/arch/x86/entry/syscalls/: syscall_32.tbl  syscall_64.tbl
03-sys_call/contact_storage/: Makefile  storage.c
03-sys_call/include/linux/: syscalls.h  user_data.h
kernel_module/: storage.c
